# cmake-opencv

./: CMakeLists.txt  README.md
include/blindshot/: Example.hpp
include/blindshot/Cam/: DesktopCamera.hpp  ICamera.hpp  PiCamera.hpp
include/libraspicam/: Findraspicam.cmake  raspicamConfig.cmake
platform/desktop/: blindshot-config.hpp
platform/raspberrypi/: blindshot-config.hpp
src/: CMakeLists.txt  Example.cpp  main.cpp
src/Cam/: DesktopCamera.cpp  PiCamera.cpp  PixyCamera.cpp
